--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
@@ -65,7 +65,7 @@
             <input style="width:40%" id="InputOrdenTrabajo" class="item-select" />-<input id="InputID" placeholder="ID" style="width:40%;" />
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2 " id="JuntaDiv">
-            <label id="CapturaArmadoHeaderJunta"></label>
+            <label id="JuntaGrid"></label>
             <input id="Junta" class="" />
         </div>
         <div class="col-sm-3 col-md-3 col-lg-3" id="MuestraDiv">
