--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
@@ -93,38 +93,41 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <h6><span id="InpeccionVisualHeaderVisual"></span></h6>
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="inputTallerDiv">
-            <label id="DimensionalVisualHeadeTaller"></label>
-            <input id="inputTaller" class="" />
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <label id="DimensionalVisualHeaderResultadoVisual"></label>
-            <input type="radio" name="ResultadoVisual" id="ResultadoVisual" style=" width:auto;" value="Aprobado" /><span id="DimensionalVisualAporbadoVisual"> </span>
-            <input type="radio" name="ResultadoVisual" style=" width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoVisual"> </span>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="inputDefectosVisualDiv">
-            <label id="DimensionalVisualHeaderDefectoVisual"></label>
-            <input id="inputDefectosVisual" class="" />
+      <div class="row">
+          <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2" id="inputTallerDiv">
+              <label id="DimensionalVisualHeadeTaller"></label>
+              <input id="inputTaller" class="" />
+          </div>   
+          <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2">
+              <label id="DimensionalVisualHeaderResultadoVisual"></label>
+              <input type="radio" name="ResultadoVisual" id="ResultadoVisual" style=" width:auto;" value="Aprobado" /><span id="DimensionalVisualAporbadoVisual"> </span>
+              <input type="radio" name="ResultadoVisual" style=" width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoVisual"> </span>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2" id="inputDefectosVisualDiv">
+              <label id="DimensionalVisualHeaderDefectoVisual"></label>
+              <input id="inputDefectosVisual" class="" />
 
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3" id="inputInspectorVisualDiv">
-            <label id="DimensionalVisualHeaderInspectorVisual"></label>
-            <input id="inputInspectorVisual" class="" />
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3" id="inputFechaVisualDiv">
-            <label id="DimensionalVisualHeaderFechaVisual"></label>
-            <input id="inputFechaVisual" class="" />
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2" id="inputInspectorVisualDiv">
+              <label id="DimensionalVisualHeaderInspectorVisual"></label>
+              <input id="inputInspectorVisual" class="" />
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" id="inputFechaVisualDiv">
+              <label id="DimensionalVisualHeaderFechaVisual"></label>
+              <input id="inputFechaVisual" class="" />
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1">
+              <label id="">&nbsp;</label>
+              <button type="button" id="btnAplicarCapturaRapida" class="btn btn-blue"><span id="botonAplicar"></span></button>
+          </div>  
+
+      </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
             <input type="radio" name="LLena" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>
             <input type="radio" name="LLena" style=" width:auto;" value="Vacios" /><span id="CapturaArmadoVacios"></span>
 
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <label id="">&nbsp;</label>
-            <button type="button" id="btnAplicarCapturaRapida" class="btn btn-blue"><span id="botonAplicar"></span></button>
-        </div>
+        </div>        
         <div id="ContenedorGrid" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="grid" data-role="grid" class="k-grid k-widget">
             </div>
