Correccion en el Stilo de Spool, y se agregan los mensajes flotantes a Armado

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
@@ -62,7 +62,7 @@
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2" id="CapturaArmadoHeaderSpoolIDDiv">
             <label id="CapturaArmadoHeaderSpoolID"></label>
-            <input style="width:40%" id="InputOrdenTrabajo" class="item-select" />-<input id="InputID" placeholder="ID" style="width:40%;" />
+            <input style="width:40%" id="InputOrdenTrabajo" class="item-select general-input"   />-<input id="InputID" placeholder="ID" style="width:40%;" />
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2 " id="JuntaDiv">
             <label id="JuntaGrid"></label>
