Se agrega html de Captura y sin captura

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/Dimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/Dimensional.cshtml
@@ -60,6 +60,11 @@
             
             <input type="hidden" id="InspeccionDimensionalID" />
         </div>
+        <div class="col-sm-3 col-md-3 col-lg-3" id="MuestraDiv" style="display: block;">
+            <label id="CapturaArmadoHeaderMostrar">Mostrar</label>
+            <input type="radio" name="Muestra" style="width:auto;" value="Sin Capturar"><span id="CapturaArmadSinCaptura">Sin captura</span>
+            <input type="radio" name="Muestra" style="width:auto;" value="Todos"><span id="CapturaArmadoTodos">Todos</span>
+        </div>
         <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2">
             <label id="">&nbsp;</label>
             <button type="button" id="btnAgregar" class="btn btn-blue"><span id="botonAgregar"></span></button>
