Se agrega el popUp para los soldadores de raiz

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
@@ -114,7 +114,7 @@
         <input id="hdAccionFiltrado" type="hidden" />
     </div>
     @*GRID POPUP*@
-    <div id="windowGrid" style="display: none; z-index:inherit;"> 
+    <div id="windowGrid" style="display: none; z-index:inherit;">
         <div class="col-sm-11 col-md-11 col-lg-11">
             <div class="row">
                 <div class="form-group">
@@ -171,6 +171,30 @@
             </div>
         </div>
     </div>
+
+    <div id="windowMultiselectSoldador" style="display: none; z-index:inherit;">
+        <div id="formaObrero" class="col-sm-12 col-md-12 col-lg-11">
+            <div class="row">
+                <div class="form-group  col-sm-12 col-md-12 col-lg-12" id="containerMultiSelect">
+                    <label id=""><span>Soldadores Raiz</span></label>
+                    <div id="contenedorMultiselect">
+                        <div id="inputSoldadoresRaiz" />
+                    </div>
+                    
+                    
+                </div>
+            </div>
+            <div>
+                <div class="form-group  col-sm-5 col-md-5 col-lg-5">
+                    <a class=" btn btn-blue " href="#" id="GuardarSoldadoresRaiz"><span id="botonGuardar4"></span></a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
 </div>
 
 <script src="~/Scripts/AppComponents/Soldadura/Seguridad.js"></script>
