Correccion de que se deshabilitaba el boton y se agrega estilo al campo de OrdenTrabajo para todos los modulos

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Shared/_Layout.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Shared/_Layout.cshtml
@@ -235,6 +235,7 @@
         /****************************/
         /*     Global Variables     */
         /****************************/
+        $("#InputOrdenTrabajo").addClass("general-input");
         var $body = $("body");
         var $homeURI = '@Url.Action("Landing", "Home")';
         var $errorURI = '@Url.Action("accessdenied", "Errors")';
