--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CapturaAvance.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CapturaAvance.cshtml
@@ -80,34 +80,40 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="row FieldSetView">
                 <div class="row">
-                    <div class="col-sm-3 col-md-3 col-lg-2">
+                    <div class="col-sm-2 col-md-2 col-lg-2">
                         <label><span id="CapturaAvanceFechaShotblast"></span></label>
                         <input id="FechaShotBlast" />
                     </div>
-                    <div class="col-sm-3 col-md-3 col-lg-2">
+                    <div class="col-sm-2 col-md-2 col-lg-2 height:200px;">
                         <label><span id="CapturaAvanceFechaPrimario"></span></label>
                         <input id="Fechaprimario" />
                     </div>
-                    <div class="col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-sm-3 col-md-3 col-lg-3 Bginput">
                         <label><span id="CapturaAvanceShotBlastero"></span></label>
                         <input id="inputShotBlastero" />
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-sm-3 col-md-3 col-lg-3 Bginput">
                         <label><span id="CapturaAvancePintor"></span></label>
                         <input id="inputPintor" />
                     </div>
-                    <div class="btn-group col-sm-3 col-md-3 col-lg-3" role="group" id="LlenaCapturaAvanceIntAcabadoDiv">
+                    <div class="col-sm-2 col-md-2 col-lg-2" id="LlenaCapturaAvanceIntAcabadoDiv">
                         <label id="CapturaAvanceIntAcabadoHeaderLlenadoMasivo"></label>
                         <input type="radio" id="LlenaTodos" name="LLena" style="width:auto;" value="Todos" /><span id="CapturaLlenadoMasivoTodos"></span>
                         <input type="radio" id="LlenaVacios" name="LLena" style="width:auto;" value="Vacios" /><span id="CapturaLlenadoMasivoVacios"></span>
+                        <br />
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                            <label id="">&nbsp;</label>
+                            <button type="button" id="ButtonPlanchar" class="btn btn-blue"><span id="botonAplicar"></span></button>
+                        </div>
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                        <label id="">&nbsp;</label>
-                        <button type="button" id="ButtonPlanchar" class="btn btn-blue"><span id="botonAplicar"></span></button>
-                    </div>
+                    
+
                 </div>
+                @*<div class="row">
+                   
+                    
+                    
+                </div>*@
             </div> 
             <div id="ContenedorGrid" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div id="grid" data-role="grid" class="k-grid k-widget"></div>
