Modicaciones intermedias de pintura

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CapturaAvance.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CapturaAvance.cshtml
@@ -84,10 +84,33 @@
                         <label><span id="CapturaAvanceFechaShotblast"></span></label>
                         <input id="FechaShotBlast" />
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2 height:200px;">
+                    <div class="col-sm-2 col-md-2 col-lg-2">
                         <label><span id="CapturaAvanceFechaPrimario"></span></label>
                         <input id="Fechaprimario" />
                     </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <span id="CapturaAvanceCuadrante"></span>
+                        <input id="inputCuadrante1" />                                              
+                    </div>
+                  
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                        <label id="">&nbsp;</label>
+                        <button type="button" id="ButtonPlanchar" class="btn btn-blue"><span id="botonAplicar"></span></button>
+                       
+                    </div>
+                    <br />
+                    <div class="col-sm-2 col-md-2 col-lg-2" id="LlenaCapturaAvanceIntAcabadoDiv">
+                        <label id="CapturaAvanceIntAcabadoHeaderLlenadoMasivo"></label>
+                        <input type="radio" id="LlenaTodos" name="LLena" style="width:auto;" value="Todos" /><span id="CapturaLlenadoMasivoTodos"></span>
+                        <input type="radio" id="LlenaVacios" name="LLena" style="width:auto;" value="Vacios" /><span id="CapturaLlenadoMasivoVacios"></span>
+                        <br />
+                       
+                    </div>
+                </div>
+                <br />
+                <br />
+               
+                <div class="row">
                     <div class="col-sm-3 col-md-3 col-lg-3 Bginput">
                         <label><span id="CapturaAvanceShotBlastero"></span></label>
                         <input id="inputShotBlastero" />
@@ -96,17 +119,6 @@
                         <label><span id="CapturaAvancePintor"></span></label>
                         <input id="inputPintor" />
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2" id="LlenaCapturaAvanceIntAcabadoDiv">
-                        <label id="CapturaAvanceIntAcabadoHeaderLlenadoMasivo"></label>
-                        <input type="radio" id="LlenaTodos" name="LLena" style="width:auto;" value="Todos" /><span id="CapturaLlenadoMasivoTodos"></span>
-                        <input type="radio" id="LlenaVacios" name="LLena" style="width:auto;" value="Vacios" /><span id="CapturaLlenadoMasivoVacios"></span>
-                        <br />
-                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                            <label id="">&nbsp;</label>
-                            <button type="button" id="ButtonPlanchar" class="btn btn-blue"><span id="botonAplicar"></span></button>
-                        </div>
-                    </div>
-                    
 
                 </div>
                 @*<div class="row">
