Cambios en CargaCarro

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -160,9 +160,17 @@
                 @*<span id="PinturaCargaBackLogCarro"></span></label>*@
                 <input id="inputCarroBacklog" class="" />
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-3">
+            <div class="col-sm-2 col-md-2 col-lg-2">
                 <label id="PinturaBotonCerrarCarro2"></label>
-                <input type="checkbox" name="Cerrar" style=" width:auto;" id="chkCerrar" />
+                <input type="checkbox" name="Cerrar" style=" width:auto;" id="chkCerrar" />d
+            </div>
+            <div class="col-sm-2 col-md-2 col-lg-2">
+                <label id="PinturaCargaArea2"></label>
+                <label id="labelM22" />
+            </div>
+            <div class="col-sm-2 col-md-2 col-lg-2">
+                <label id="PinturaCargaToneladas2"></label>
+                <label id="labelToneladas2" />
             </div>
         </div>
         @*GRID*@
