Modificacion de la vista para guardado

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
@@ -148,8 +148,8 @@
                             <span class="caretWhite"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a href="#" id="btnGuardar"><span id="btnGuardarPiePagina"></span></a></li>
-                            <li><a href="#" id="btnGuardarYNuevo"><span id="DetalleAvisoLlegada0062"></span></a></li>
+                            <li><a href="#" id="btnGuardarPie"><span id="btnGuardarPiePagina"></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevoPie"><span id="DetalleAvisoLlegada0062"></span></a></li>
                         </ul>
                     </div>
                     <a id="btnCancelar" class="btn btn-black"><span id="CapturaSoldaduraCancelar"></span></a>
