cambio para eliminar cuando borras manualmente y en cargaCarro

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -162,7 +162,7 @@
             </div>
             <div class="col-sm-2 col-md-2 col-lg-2">
                 <label id="PinturaBotonCerrarCarro2"></label>
-                <input type="checkbox" name="Cerrar" style=" width:auto;" id="chkCerrar" />d
+                <input type="checkbox" name="Cerrar" style=" width:auto;" id="chkCerrar" />
             </div>
             <div class="col-sm-2 col-md-2 col-lg-2">
                 <label id="PinturaCargaArea2"></label>
