--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
@@ -98,6 +98,10 @@
             <input id="inputTaller" class="" />
         </div>
         <div class="col-sm-3 col-md-3 col-lg-3">
+            <label id="CapturaSoldaduraHeaderColada">Colada</label>
+            <input id="inputColada" class="" />
+        </div>
+        <div class="col-sm-3 col-md-3 col-lg-3">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
             <input type="radio" name="LLena" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>
             <input type="radio" name="LLena" style=" width:auto;" value="Vacios" /><span id="CapturaArmadoVacios"></span>
