Cambios de Dimensional

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/Dimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/Dimensional.cshtml
@@ -149,7 +149,7 @@
 <script type="text/javascript" src="~/Scripts/AppComponents/Inspeccion/Dimensional/Render.js"></script>
 <script type="text/javascript" src="~/Scripts/AppComponents/Inspeccion/Dimensional/Captura.js"></script>
 <script type="text/javascript" src="~/Scripts/AppComponents/Inspeccion/Dimensional/Seguridad.js"></script>
-
+<script type="text/javascript" src="~/Scripts/General/Validate/Grid.js"></script>
 <script>
     @section JavascriptDocumentReadyFunctions {
     $authorizationModel["Dimensional"] = $DimensionalModel;
