--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
@@ -185,13 +185,33 @@
                         <div id="inputSoldadoresRaiz" />
                     </div>
                     
-                    
                 </div>
             </div>
             <div>
                 <div class="form-group  col-sm-5 col-md-5 col-lg-5">
                     <a class=" btn btn-blue " href="#" id="GuardarSoldadoresRaiz"><span id="botonGuardar4"></span></a>
                 </div>
+
+            </div>
+        </div>
+
+    </div>
+    <div id="windowMultiselectSoldadorRelleno" style="display: none; z-index:inherit;">
+        <div id="formaObrero" class="col-sm-12 col-md-12 col-lg-11">
+            <div class="row">
+                <div class="form-group  col-sm-12 col-md-12 col-lg-12" id="containerMultiSelect">
+                    <label id=""><span>Soldadores Relleno</span></label>
+                    <div id="contenedorMultiselectRelleno">
+                        <div id="inputSoldadoresRelleno" />
+                    </div>
+
+                </div>
+            </div>
+            <div>
+                <div class="form-group  col-sm-5 col-md-5 col-lg-5">
+                    <a class=" btn btn-blue " href="#" id="GuardarSoldadoresRelleno"><span id="botonGuardar5"></span></a>
+                </div>
+
             </div>
         </div>
 
