Se agrega funcion para que guarde solo registros completos

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
@@ -234,6 +234,8 @@
 <script src="~/Scripts/AppComponents/Soldadura/Handlers.js"></script>
 <script src="~/Scripts/AppComponents/Soldadura/Render.js"></script>
 <script src="~/Scripts/AppComponents/Soldadura/Captura.js"></script>
+<script type="text/javascript" src="~/Scripts/Confirm/jquery.confirm.js"></script>
+<script type="text/javascript" src="~/Scripts/General/Validate/Grid.js"></script>
 
 <script>
     @section JavascriptDocumentReadyFunctions {
