Correccion al limpiar y guardar en SOldadura, y eliminacion del carro al guardar en CargarCarro

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -236,27 +236,27 @@
             <input id="InputNombre" class="form-control" />
         </div>
 
-        <div class="form-group" id="inputClasificacionDiv">
+        <div class="form-group" id="inputClasificacionDiv" style="display:none;">
             <label id="labelClasificion"></label><span style="font-size: 19px;">*</span>
             <input id="inputClasificacion" class="form-control" />
         </div>
 
-        <div class="form-group" id="inputPersistenciaDiv">
+        <div class="form-group" id="inputPersistenciaDiv" style="display:none;">
             <label id="labelPersisitencia"></label><span style="font-size: 19px;">*</span>
             <input id="inputPersistencia" class="form-control" />
         </div>
 
-        <div class="form-group" id="divNumeroVeces">
+        <div class="form-group" id="divNumeroVeces" style="display:none;">
             <label id="labelNumeroVeces"></label><span style="font-size: 19px;">*</span>
             <input id="inputNumeroVeces" class="form-control" />
         </div>
 
-        <div class="form-group" id="inputPesoMaximoDiv">
+        <div class="form-group" id="inputPesoMaximoDiv" style="display:none;">
             <label id="labelPesoMaximo"></label><span style="font-size: 19px;">*</span>
             <input id="inputPesoMaximo" class="form-control" />
         </div>
 
-        <div class="form-group" id="inputAreaDiv">
+        <div class="form-group" id="inputAreaDiv" style="display:none;">
             <label id="labelArea"></label><span style="font-size: 19px;">*</span>
             <input id="inputArea" class="form-control" />
         </div>
