--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Embarque/Cargas.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Embarque/Cargas.cshtml
@@ -124,6 +124,41 @@
         </div>
         <input id="hdAccionFiltrado" type="hidden" />
     </div>
+    @*NUEVO PROVEDOR POPUP*@
+    <div id="windowPopUp" style="display: none; z-index:inherit;">
+        <div class="col-sm-11 col-md-11 col-lg-11">
+            <div class="row">
+                <div class="form-group">
+                    <div id="ContenedorWindowPopUp">
+                        <div class="col-sm-3 col-md-3 col-lg-2" id="divNombreNuevoProveedor">
+                            <label id="lblNombreNuevoProveedor"></label>
+                            <input id="inputNombreNuevoProveedor" />
+                        </div>
+                        <div class="col-sm-3 col-md-3 col-lg-2" id="divNuevoProveedorDesc">
+                            <label id="lblNuevoProveedorDesc"></label>
+                            <input id="inputNuevoProveedorDesc" />
+                        </div>
+                        <div class="col-sm-3 col-md-3 col-lg-2" id="divNuevoProveedorDir">
+                            <label id="lblNuevoProveedorDir"></label>
+                            <input id="inputNuevoProveedorDir" />
+                        </div>
+                        <div class="col-sm-3 col-md-3 col-lg-2" id="divNuevoProveedorTel">
+                            <label id="lblNuevoProveedorTel"></label>
+                            <input id="inputNuevoProveedorTel" />
+                        </div>
+                </div>
+            </div>
+            <div class="row">
+                <a class=" btn btn-primary col-sm-4 col-md-4 col-lg-4" href="#" id="GuardarNuevoProveedor">
+                    <span id="textoGuardar"></span>
+                </a>
+                <div class="col-sm-1 col-md-1 col-lg-1"></div>
+                <a class=" btn btn-primary col-sm-4 col-md-4 col-lg-4" href="#" id="CancelarNuevoProveedor">
+                    <span id="textoCancelar"></span>
+                </a>
+            </div>
+        </div>
+    </div>
     @*Menu Inferior*@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
