--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Home/Index.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Home/Index.cshtml
@@ -42,8 +42,8 @@
         // Definity
         if ($("#username").val() && $("#password").val()) {
             authenticate($("#username").val(), $("#password").val());
-            $('#username').css('border-color', "red");
-            $('#password').css('border-color', "red");
+            //$('#username').css('border-color', "red");
+            //$('#password').css('border-color', "red");
             validateCredentials();
         }
         else {
