Se elimina Colada y se añade WPS y PQR

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
@@ -98,8 +98,12 @@
             <input id="inputTaller" class="" />
         </div>
         <div class="col-sm-3 col-md-2 col-lg-2">
-            <label id="CapturaSoldaduraHeaderColada">Colada</label>
-            <input id="inputColada" class="" />
+            <label id="CapturaSoldaduraHeaderWPS">WPS</label>
+            <input id="inputWPS" class="" />
+        </div>
+        <div class="col-sm-3 col-md-2 col-lg-2">
+            <label id="CapturaSoldaduraHeaderPQR">PQR</label>
+            <input id="inputPQR" class="" />
         </div>
         <div class="col-sm-3 col-md-2 col-lg-2">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
