Se añade columna WPS Raiz y Relleno (Soldadura)

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Soldadura/capturaSoldadura.cshtml
@@ -97,14 +97,14 @@
             <label id="CapturaArmadoHeaderTaller">Taller</label>
             <input id="inputTaller" class="" />
         </div>
-        <div class="col-sm-3 col-md-2 col-lg-2">
+        @*<div class="col-sm-3 col-md-2 col-lg-2">
             <label id="CapturaSoldaduraHeaderWPS">WPS</label>
             <input id="inputWPS" class="" />
         </div>
         <div class="col-sm-3 col-md-2 col-lg-2">
             <label id="CapturaSoldaduraHeaderPQR">PQR</label>
             <input id="inputPQR" class="" />
-        </div>
+        </div>*@
         <div class="col-sm-3 col-md-2 col-lg-2">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
             <input type="radio" name="LLena" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>
