--- a/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/overrides.css
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/overrides.css
@@ -589,6 +589,10 @@
 .k-grid tbody tr td a.k-button.k-grid-Detalle,
 .k-grid tbody tr td a.k-button.k-grid-Detail {
     background-image: url("/Content/images/SAMC_DetailIcon.png");
+    padding-right: 10px;
+    height: 20px;
+    min-width: 20px !important;
+    margin: 0px;
 }
 
 .k-grid tbody tr td a.k-button.k-grid-Cancelar,
